--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Your code here -->
  <!DOCTYPE html>
- <html lang="en"></html>
+ <html lang="en">
  <!-- This is a comment! -->
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -14,3 +14,7 @@
 <link rel="stylesheet" type="text/css" href="typography.css" />
 <title>My Site Title</title>
   </head>
+  <body>
+    
+  </body>
+  </html>
